fix: make hamburger menu button fixed to stay visible on scroll

--- a/components/header/MainHeader.module.css
+++ b/components/header/MainHeader.module.css
@@ -61,7 +61,7 @@
   width: 30px;
   height: 24px;
   transition: all 0.25s;
-  position: relative;
+  position: fixed;
   z-index: 50;
   background: transparent;
   border: none;
